=================================
CHANGES for Crate Mesos Framework
=================================

Unreleased
==========

  - Updated Mesos to ``0.28.1`` and Crate client to ``0.54.8``

2015/08/08 0.1.0
================

  - Added shutdown hook to terminate crate if the executor goes down

  - Stop Crate process when executor is shutting down

  - Make framework name configurable

  - Use JRE from OpenJDK from
    `https://github.com/alexkasko/openjdk-unofficial-builds#openjdk-unofficial-installers-for-windows-linux-and-mac-os-x`_

  - Use custom version of OpenJDK as dependency

  - initial framework implementation
    see README.rst for usage and limitations
